Ensure space separated `ENV` and `VOLUME` lines are modeled as such